--- a/Appy/styles/styles.scss
+++ b/Appy/styles/styles.scss
@@ -642,31 +642,36 @@ a {
     align-items: center;
     transition: opacity 0.3s ease;
     text-decoration: none;
-    
+
   }
-}
+  
+  .social-tooltip {
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #546286;
+    color: #FFFFFF;
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-size: 12px;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    // pointer-events: none;
+    // white-space: nowrap;
+  }
+  
+  .social-icon:hover .social-tooltip {
+    opacity: 1;
+    visibility: visible;
+  }
+      }
+    
+  // }
 
-.social-tooltip {
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #546286;
-  color: #FFFFFF;
-  padding: 5px 10px;
-  border-radius: 4px;
-  font-size: 12px;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.3s ease;
-  pointer-events: none;
-  white-space: nowrap;
-}
 
-.social-icon:hover .social-tooltip {
-  opacity: 1;
-  visibility: visible;
-}
+
 
 // Media Queries
 @media (max-width: 1400px) {
