--- a/Appy-React/src/App.scss
+++ b/Appy-React/src/App.scss
@@ -1,7 +1,7 @@
 @use './styles/variables.scss' as vars;
+@use './styles/mixin.scss' as mixins;
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-
 
 .container {
   max-width: 1280px;
@@ -16,6 +16,717 @@
   // margin: 0 auto;
   // padding: 2rem;
   // text-align: center;
+}
+
+@media (max-width: 1400px) {
+  .hero-image {
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    .footer-section {
+      .container {
+        max-width: 95%;
+      }
+    }
+  }
+
+  .hero-row{
+    padding-left: 30px;
+  }
+  // .slider3-section {
+  //   .carousel-img {
+  //     max-width: 100%;
+  //     height: auto;
+  //   }
+  // }
+
+  .slider3-section {
+    .carousel-img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .inner-container {
+      max-width: 90%;
+      gap: 60px;
+    }
+  }
+  .que-container {
+    gap: 50px;
+    padding: 50px 20px;
+  }
+  ////////////
+  .services-image {
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+  
+  .services-row {
+    // padding-left: 30px;
+  }
+
+  .footer-row{
+    padding-left: 20px;
+  
+  }
+  .footer-section {
+    .container {
+      max-width: 95%;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+ 
+
+}
+
+@media (max-width: 1200px) {
+  .hero-img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  //feature section
+  .feature-section {
+    padding-top: 40px;
+  }
+
+  //slider1-section
+  .slider1-section,
+  .slider2-section {
+    // padding: 60px 0;
+  }
+
+  .slider3-section {
+    padding: 50px 0;
+
+    .inner-container {
+      gap: 40px;
+    }
+
+    .carousel-content {
+      gap: 10px;
+    }
+    .carousel-indicators {
+      left: 16%;
+    }
+    /////
+    
+}
+
+////////////////
+.services-row {
+  display: flex;
+  align-items: center;
+}
+.services-img {
+  max-width: 100%;
+  height: auto;
+}
+
+.services-section {
+  padding: 60px 0;
+}
+
+.footer-links {
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+}
+
+.footer-copyright {
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.carousel-text{
+  margin: 0;
+}
+
+
+}
+
+@media (max-width: 992px) {
+ 
+  //navbar-section
+  .navbar-container {
+    height: auto;
+  }
+
+  .nav-buttons {
+    margin-top: 15px;
+  }
+
+  .navbar-nav {
+    margin-left: 0;
+  }
+  // Hero Section
+  // .hero-img{
+  //   // max-width: 100%;
+  //   // height: auto;
+
+  //   img {
+  //     max-width: 100%;
+  //     height: auto;
+  //   }
+  // }
+
+  .hero-section {
+    // padding: 60px 0;
+    padding: 48px 16px;
+    gap: 32px;
+    text-align: center;
+  }
+
+  .hero-row {
+    flex-direction: column;
+  }
+
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    padding: 0px 8px;
+    gap: 24px;
+  }
+
+  .hero-buttons {
+    justify-content: center;
+    display: flex;
+    gap: 32px;
+  }
+
+  .btn-get-started {
+    @include mixins.Button-M;
+    padding: 12px;
+  }
+
+  .btn-watch-video {
+    @include mixins.Button-M;
+    padding: 12px 8px;
+  }
+  //feature section
+  .fe-row {
+    gap: 20px;
+    padding: 10px 0px;
+  }
+
+  .fe {
+    padding: 16px;
+    margin-bottom: 16px;
+  }
+
+  //slider1 section
+  .s1-row,
+  .s2-row {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  // .s1-img, .s2-img {
+  //   // max-width: 80%;
+  //   // margin: 0 auto;
+  //   // display: block;
+  // }
+
+  //accodian
+
+  .accordion-container {
+    // padding: 16px;
+  }
+  ///////////
+  .slider3-section {
+    // padding: 45px 0;
+
+    .inner-container {
+      gap: 30px;
+    }
+
+    .carousel-rows {
+      flex-direction: column;
+    }
+
+    .carousel-item1,
+    .carousel-item2 {
+      width: 100%;
+    }
+
+    .carousel-content {
+      margin-left: 0;
+      margin-top: 30px;
+      text-align: center;
+      align-items: center;
+      gap: 24px;
+    }
+
+    .carousel-heads {
+      text-align: center;
+    }
+
+    .carousel-control-prev {
+      left: -40px;
+    }
+
+    .carousel-control-next {
+      right: -40px;
+    }
+
+    .carousel-indicators {
+      left: 0%;
+    }
+  }
+
+  .que-heading {
+    @include mixins.Heading5;
+  }
+
+  .accordion-button {
+    @include mixins.Body-L;
+  }
+///////////////services section
+  .services-section {
+    padding: 48px 16px;
+    gap: 32px;
+    text-align: center;
+  }
+  
+  .services-row {
+    flex-direction: column;
+  }
+  
+  .services-content {
+    display: flex;
+    flex-direction: column;
+    padding: 0px 8px;
+    gap: 24px;
+  }
+  
+  // .services-buttons {
+  //   justify-content: center;
+  //   display: flex;
+  // }
+  
+  .services-title {
+    @include mixins.Heading5;
+    align-items: center;
+    display: flex;
+    text-align: center;
+
+  justify-content: center
+  }
+  
+  .services-description {
+    @include mixins.Body-L;
+}
+.services-row {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+
+.services-buttons {
+  display: flex;
+justify-content: center;
+}
+
+.footer-category {
+  margin-bottom: 24px;
+}
+
+.footer-copyright {
+  .row {
+    gap: 16px;
+  }
+}
+.carousel-indicators{
+  margin-bottom: -30px;
+}
+
+}
+
+@media (max-width: 768px) {
+  //navbar
+  .nav-buttons {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .login-btn,
+  .get-started-btn {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  // Hero Section
+  // .hero-content {
+  //   // padding: 40px 30px;
+  // }
+
+  .hero-title {
+    @include mixins.Heading4;
+  }
+  .hero-description {
+    @include mixins.Body-M;
+  }
+
+  // .btn-get-started {
+  //   @include Button-M;
+  //   padding: 12px 18px;
+  // }
+
+  // .btn-watch-video {
+  //   padding: 12px 8px;
+  // }
+  .hero-buttons {
+    gap: 32px;
+  }
+
+  .hero-img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  //feature section
+  .feature-section {
+    padding-top: 40px;
+  }
+
+  .fe {
+    align-items: center;
+    text-align: center;
+
+    img {
+      margin-bottom: 16px;
+    }
+  }
+
+  .fe-heading {
+    text-align: center;
+    margin-bottom: 12px;
+    font-size: 20px;
+  }
+
+  .fe-text {
+    text-align: center;
+  }
+
+  //slider 1 section
+  .slider1-section,
+  .slider2-section {
+    padding-top: 40px;
+  }
+
+  .s1-heading,
+  .s2-heading {
+    @include mixins.Heading5;
+  }
+
+  .s1-subheading,
+  .s2-subheading {
+    @include mixins.Body-L;
+    margin-bottom: 32px;
+  }
+  //accordian
+  .accordion-header {
+    padding-left: 32px;
+    @include mixins.Subtitle-L;
+  }
+
+  .accordion-content {
+    padding-left: 32px;
+
+    p {
+      @include mixins.Body-M;
+    }
+  }
+  /////////////
+  .slider3-section {
+    // padding: 40px 0;
+
+    .inner-container {
+      max-width: 95%;
+      gap: 20px;
+    }
+
+    .carousel-text {
+      @include mixins.Body-L;
+    }
+
+    .carousel-control-prev {
+      left: -30px;
+    }
+
+    .carousel-control-next {
+      right: -30px;
+    }
+
+    // .carousel-indicators {
+    //   margin-bottom: 30px;
+
+    //   [data-bs-target] {
+    //     width: 6px;
+    //     height: 6px;
+    //   }
+
+    //   .active {
+    //     width: 30px;
+    //   }
+    // }
+    .slider3-section {
+      .main-container {
+        padding: 0 15px;
+        margin: 0 auto;
+      }
+
+      .inner-container {
+        max-width: 100%;
+        padding: 0;
+        margin: 0 auto;
+        gap: 20px;
+      }
+
+      .carousel-item {
+        display: flex;
+        justify-content: center;
+
+        .carousel-rows {
+          width: 100%;
+          margin: 0;
+        }
+      }
+      .carousel-inner {
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+      }
+    }
+  }
+
+  
+  .services-img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .services-content{
+  margin: 0px;
+}
+.services-content{
+margin: 0 0;
+}
+
+// .footer-links {
+//   padding-top: 48px;
+//   padding-bottom: 48px;
+// }
+.footer-category {
+  text-align: center;
+  
+  .footer-title {
+    text-align: center;
+  }
+  .footer-points {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    li {
+      text-align: center;
+    }
+  }
+}
+
+.footer-copyright {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  
+  .row {
+    flex-direction: column;
+    gap: 16px;
+  }
+  .social-icons {
+    justify-content: center; 
+    padding-top: 15px; 
+  }
+  
+  .footer-logo, .copyright-text, .social-icons {
+    text-align: center;
+  }
+}
+
+}
+
+@media (max-width: 576px) {
+  .hero-description {
+    @include mixins.Body-M;
+  }
+
+  .btn-watch-video {
+    padding: 12px 8px;
+  }
+
+  .video-icon {
+    transform: scale(0.8);
+  }
+
+  //feature section
+  .feature-section {
+    // padding: 32px 0;
+  }
+
+  .fe-row {
+    gap: 24px;
+  }
+
+  .fe {
+    padding: 0 40px;
+    margin-bottom: 24px;
+
+    img {
+      // height: 48px;
+      margin-bottom: 12px;
+    }
+  }
+
+  .fe-heading {
+    @include mixins.Heading6;
+    margin-bottom: 8px;
+    color: vars.$BlueGray-900;
+  }
+
+  .fe-text {
+    @include mixins.Body-L;
+    color: vars.$BlueGray-900;
+  }
+
+  //slider1 section
+  .slider1-section,
+  .slider2-section {
+    padding-top: 32px;
+  }
+  .slider1-content,
+  .slider2-content {
+    display: flex;
+    gap: 10px;
+  }
+
+  .s1-heading,
+  .s2-heading {
+    @include mixins.Heading5;
+  }
+
+  .s1-subheading,
+  .s2-subheading {
+    @include mixins.Body-L;
+    margin-bottom: 32px;
+    text-align: center;
+    padding: 0 15px;
+  }
+
+  .s1-img,
+  .s2-img {
+    max-width: 100%;
+  }
+
+  // accordian
+  .accordion-item {
+    margin-bottom: 16px;
+  }
+
+  .accordion-header {
+    padding: 8px 8px 8px 24px;
+  }
+
+  .accordion-content {
+    padding-left: 24px;
+
+    &.active {
+      padding-top: 12px;
+      padding-bottom: 12px;
+    }
+  }
+
+  // .carousel-control-prev,
+  // .carousel-control-next {
+  //   display: none;
+  // }
+  .slider3-section {
+    // padding: 0px 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+
+    .main-container {
+      width: 100%;
+      max-width: 100%;
+    }
+
+    .inner-container {
+      max-width: 100%;
+      gap: 16px;
+    }
+
+    .carousel-img {
+      max-width: 90%;
+    }
+
+    .carousel-content {
+      margin-top: 24px;
+      gap: 16px;
+      padding: 0 10px;
+    }
+
+    .carousel-heading {
+      @include mixins.Caption-M;
+    }
+    .carousel-item1,
+    .carousel-item2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 15px;
+    }
+
+    .carousel-text {
+      @include mixins.Body-L;
+    }
+
+    .highlight-start,
+    .highlight-end {
+      @include mixins.Heading6;
+    }
+
+    .carousel-control-prev,
+    .carousel-control-next {
+      display: none;
+    }
+
+    // .carousel-indicators {
+    //   margin-bottom: 16px;
+
+    //   [data-bs-target] {
+    //     width: 5px;
+    //     height: 5px;
+    //     margin: 0 4px;
+    //   }
+
+    //   .active {
+    //     width: 24px;
+    //   }
+    }
+  }
+
+  .services-section {
+    padding: 32px 16px;
+  }
+  
+  .services-img {
+    max-width: 100%;
+  }
+
+
+.services-content{
+  margin: 0px;
 }
 /*
 .logo {
