--- a/Appy-React/src/components/Hero/Hero.scss
+++ b/Appy-React/src/components/Hero/Hero.scss
@@ -37,14 +37,13 @@
     @include  mixins.All-Button;
   
     &:hover {
-      background-color: darken(vars.$Blue-600, 10%);
+      // background-color: darken(vars.$Blue-600, 10%);
       color: vars.$White;
     }
   }
   
   .btn-watch-video {
     @include  mixins.Button-L;
-    font-family: vars.$body-font;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,7 +52,7 @@
     transition: all 0.3s ease;
   
     &:hover {
-      background-color: lighten(vars.$Blue-600, 45%);
+      // background-color: lighten(vars.$Blue-600, 45%);
     }
   }
   
