--- a/Appy-React/src/styles/mixin.scss
+++ b/Appy-React/src/styles/mixin.scss
@@ -1,6 +1,5 @@
 @use './variables.scss' as vars;
 
-
 @mixin liner-bg {
     background: linear-gradient(180deg, vars.$gradient-start 0%, vars.$gradient-end 100%);
   }
@@ -83,8 +82,6 @@
   }
   
   
-  
-  
   @mixin Button-M {
       font-size: 16px;
       font-weight: 500;
@@ -114,7 +111,6 @@
         }
   }
   
-  
 
   @mixin All-Button {
       background-color: vars.$Blue-600;
@@ -129,6 +125,7 @@
       transition: all 0.3s ease;
     
       &:hover {
+        background-color: rgb(13, 18, 172);
       }
     }
   
@@ -143,6 +140,7 @@
       cursor: pointer;
     
       &:hover {
+        background-color: rgb(223, 224, 251);
       }
     }
   
